Added filtering for hop-by-hop filters